# pathways

./: .all-contributorsrc  .gitignore  LICENSE  README.md  documentation.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml  tests.yml
pathways/: __init__.py  badge.py  card.py  landing_page.py  main.py
tests/: test_badge.py  test_card.py  test_landing.py  test_main.py
tests/test_files/test_landing/: actual_landing.md  expected_landing.md  toc_allow_list.json  toc_whitelist.json
tests/test_files/test_one/: _toc.yml  dsg_toc.yml  phd_toc.yml
